# file-response

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: main.yml
file_response/: __init__.py
tests/: test_response.py
